--- a/dns.vcxproj
+++ b/dns.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="src\start.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="dependencies\ini-file-parser\src\macros.h" />
     <ClInclude Include="dependencies\Ini-file-parser\src\parseIni.h" />
     <ClInclude Include="src\incl.h" />
     <ClInclude Include="src\dns.h" />
