--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dependencies/Ini-file-parser"]
-	path = dependencies/Ini-file-parser
+[submodule "IniParser"]
+	path = dependencies/ini-file-parser
 	url = https://github.com/Soreg404/Ini-file-parser.git
