--- a/dns.vcxproj
+++ b/dns.vcxproj
@@ -160,11 +160,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dependencies\Ini-file-parser\src\datatypes.cpp" />
+    <ClCompile Include="dependencies\Ini-file-parser\src\parseIni.cpp" />
+    <ClCompile Include="dependencies\Ini-file-parser\src\presentation.cpp" />
     <ClCompile Include="src\config.cpp" />
+    <ClCompile Include="src\dns.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\start.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="dependencies\ini-file-parser\src\macros.h" />
+    <ClInclude Include="dependencies\Ini-file-parser\src\parseIni.h" />
     <ClInclude Include="src\incl.h" />
     <ClInclude Include="src\dns.h" />
   </ItemGroup>
