--- a/dns.vcxproj.filters
+++ b/dns.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="dependencies">
+      <UniqueIdentifier>{9970374d-e03f-4b4d-90c3-28928c7ae8b9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="dependencies\IniParser">
+      <UniqueIdentifier>{9a7249bb-91de-49a5-be3e-a368b38b398c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -24,6 +30,18 @@
     <ClCompile Include="src\start.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\dns.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="dependencies\Ini-file-parser\src\datatypes.cpp">
+      <Filter>dependencies\IniParser</Filter>
+    </ClCompile>
+    <ClCompile Include="dependencies\Ini-file-parser\src\parseIni.cpp">
+      <Filter>dependencies\IniParser</Filter>
+    </ClCompile>
+    <ClCompile Include="dependencies\Ini-file-parser\src\presentation.cpp">
+      <Filter>dependencies\IniParser</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\dns.h">
@@ -31,6 +49,12 @@
     </ClInclude>
     <ClInclude Include="src\incl.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dependencies\Ini-file-parser\src\parseIni.h">
+      <Filter>dependencies\IniParser</Filter>
+    </ClInclude>
+    <ClInclude Include="dependencies\ini-file-parser\src\macros.h">
+      <Filter>dependencies\IniParser</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
